# tradingassistant

./: .env.example  .gitignore  HANDOFF.md  README.md  pyproject.toml  requirements.txt
app/: __init__.py  main.py
docs/: api.md  project_memory.md  system_design.md
scripts/: backtest_snapshot_io.py  build_backtest_snapshot.py  check_exchange_connectivity.py  collect_bybit_liquidations.py  confirmed_swing_ablation.py  counterfactual_entry_study.py  demo_analyze.py  diagnose_backtest_phases.py  diagnose_mainline_vs_no_reversal_no_aux.py  diff_level_aware_confirmation_bear_regime_2022_2023.py  diff_mainline_vs_no_reversal_no_aux_trades.py  diff_post_tp1_extension_veto_vs_threebars.py  diff_post_tp1_extension_vs_baseline.py  event_study_setup.py  exit_surface_study.py  generate_offline_ohlcv.py  post_tp1_managed_replay.py  review_mainline_vs_no_reversal_cases.py  review_post_tp1_extension_opportunity_chains.py  run_axis_band_risk_label_study.py  run_backtest.py  run_breakout_candidate_vs_challenger_managed.py  run_breakout_standalone_one_rule_gate.py  run_carry_basis_execution_refined_study.py  run_carry_basis_execution_study.py  run_carry_basis_research.py  run_conditional_be_management_matrix.py  run_derivatives_predictive_power_study.py  run_derivatives_state_panel_research.py  run_derivatives_state_strict_study.py  run_entry_attribution_matrix.py  run_exhaustion_candidate_vs_challenger_managed.py  run_exhaustion_divergence_takeaways.py  run_exhaustion_divergence_vs_challenger_managed.py  run_exhaustion_standalone_one_rule_gate.py  run_gate_entry_matrix.py  (+41 more)
(+201 files in other folders)
