[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "trading-assistant"
version = "0.1.0"
description = "Rule-based multi-timeframe trading analysis assistant"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115,<1.0",
  "uvicorn[standard]>=0.30,<1.0",
  "pydantic>=2.7,<3.0",
  "pydantic-settings>=2.4,<3.0",
  "sqlalchemy>=2.0,<3.0",
  "ccxt>=4.4,<5.0",
  "pandas>=2.2,<3.0",
  "numpy>=1.26,<3.0",
  "PyYAML>=6.0,<7.0",
  "httpx>=0.27,<1.0",
  "requests>=2.32,<3.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3,<9.0",
  "playwright>=1.53,<2.0",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
markers = [
  "browser: browser-level smoke tests that require Playwright and a Chromium binary",
]
